# tinyplypy

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test.py
src/: bindings.cpp
tinyplypy/: __init__.py  bindings.cpp  writer.py
tinyplypy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
