[project]
name = "tinyplypy"
version = "0.1.0"
description = "open ply files quickly and easily"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.10"  # Explicitly list pybind11 here
]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.10"  # Explicitly list pybind11 here
]
build-backend = "setuptools.build_meta"
